wrapper/tmp.h

#define __STDC_HOSTED__ 1
unsigned avutil_version(void);
const char *avutil_configuration(void);
const char *avutil_license(void);
enum AVMediaType {
    AVMEDIA_TYPE_UNKNOWN = -1, 
    AVMEDIA_TYPE_VIDEO,
    AVMEDIA_TYPE_AUDIO,
    AVMEDIA_TYPE_DATA, 
    AVMEDIA_TYPE_SUBTITLE,
    AVMEDIA_TYPE_ATTACHMENT, 
    AVMEDIA_TYPE_NB
};
const char *av_get_media_type_string(enum AVMediaType media_type);
#define FF_LAMBDA_SHIFT 7
#define FF_LAMBDA_SCALE (1<<FF_LAMBDA_SHIFT)
#define FF_QP2LAMBDA 118 
#define FF_LAMBDA_MAX (256*128-1)
#define FF_QUALITY_SCALE FF_LAMBDA_SCALE 
#define AV_TIME_BASE 1000000
enum AVPictureType {
    AV_PICTURE_TYPE_NONE = 0, 
    AV_PICTURE_TYPE_I, 
    AV_PICTURE_TYPE_P, 
    AV_PICTURE_TYPE_B, 
    AV_PICTURE_TYPE_S, 
    AV_PICTURE_TYPE_SI, 
    AV_PICTURE_TYPE_SP, 
    AV_PICTURE_TYPE_BI, 
};
char av_get_picture_type_char(enum AVPictureType pict_type);
#define errno (*__errno_location ())
typedef long unsigned int size_t;
#define NULL ((void *)0)
#define NULL ((void *)0)
typedef __builtin_va_list __gnuc_va_list;
typedef __gnuc_va_list va_list;
#define NULL ((void *)0)
extern void *realloc (void *__ptr, size_t __size)
     ;
extern void free (void *__ptr) ;
extern int atexit (void (*__func) (void)) ;
extern int on_exit (void (*__func) (int __status, void *__arg), void *__arg)
     ;
#define NULL ((void *)0)
#define LIBAVUTIL_VERSION_MAJOR 52
#define LIBAVUTIL_VERSION_MINOR 38
#define LIBAVUTIL_VERSION_MICRO 100
#define LIBAVUTIL_VERSION_INT AV_VERSION_INT(LIBAVUTIL_VERSION_MAJOR, LIBAVUTIL_VERSION_MINOR, LIBAVUTIL_VERSION_MICRO)
#define LIBAVUTIL_BUILD LIBAVUTIL_VERSION_INT
#define LIBAVUTIL_IDENT "Lavu" AV_STRINGIFY(LIBAVUTIL_VERSION)
#define FF_API_GET_BITS_PER_SAMPLE_FMT (LIBAVUTIL_VERSION_MAJOR < 53)
#define FF_API_FIND_OPT (LIBAVUTIL_VERSION_MAJOR < 53)
#define FF_API_OLD_AVOPTIONS (LIBAVUTIL_VERSION_MAJOR < 53)
#define FF_API_PIX_FMT (LIBAVUTIL_VERSION_MAJOR < 53)
#define FF_API_CONTEXT_SIZE (LIBAVUTIL_VERSION_MAJOR < 53)
#define FF_API_PIX_FMT_DESC (LIBAVUTIL_VERSION_MAJOR < 53)
#define FF_API_AV_REVERSE (LIBAVUTIL_VERSION_MAJOR < 53)
#define FF_API_AUDIOCONVERT (LIBAVUTIL_VERSION_MAJOR < 53)
#define FF_API_CPU_FLAG_MMX2 (LIBAVUTIL_VERSION_MAJOR < 53)
#define FF_API_SAMPLES_UTILS_RETURN_ZERO (LIBAVUTIL_VERSION_MAJOR < 53)
#define FF_API_LLS_PRIVATE (LIBAVUTIL_VERSION_MAJOR < 53)
#define FF_API_AVFRAME_LAVC (LIBAVUTIL_VERSION_MAJOR < 53)
#define AV_HAVE_BIGENDIAN 0
#define AV_HAVE_FAST_UNALIGNED 1
#define AV_HAVE_INCOMPATIBLE_LIBAV_ABI 0
#define AV_HAVE_INCOMPATIBLE_FORK_ABI 0
 int av_log2(unsigned v);
 int av_log2_16bit(unsigned v);
#define NULL ((void *)0)
#define AVERROR(e) (-(e)) 
#define AVERROR_BSF_NOT_FOUND FFERRTAG(0xF8,'B','S','F') 
#define AVERROR_BUG FFERRTAG( 'B','U','G','!') 
#define AVERROR_BUFFER_TOO_SMALL FFERRTAG( 'B','U','F','S') 
#define AVERROR_DECODER_NOT_FOUND FFERRTAG(0xF8,'D','E','C') 
#define AVERROR_DEMUXER_NOT_FOUND FFERRTAG(0xF8,'D','E','M') 
#define AVERROR_ENCODER_NOT_FOUND FFERRTAG(0xF8,'E','N','C') 
#define AVERROR_EOF FFERRTAG( 'E','O','F',' ') 
#define AVERROR_EXIT FFERRTAG( 'E','X','I','T') 
#define AVERROR_EXTERNAL FFERRTAG( 'E','X','T',' ') 
#define AVERROR_FILTER_NOT_FOUND FFERRTAG(0xF8,'F','I','L') 
#define AVERROR_INVALIDDATA FFERRTAG( 'I','N','D','A') 
#define AVERROR_OPTION_NOT_FOUND FFERRTAG(0xF8,'O','P','T') 
#define AVERROR_PATCHWELCOME FFERRTAG( 'P','A','W','E') 
#define AVERROR_PROTOCOL_NOT_FOUND FFERRTAG(0xF8,'P','R','O') 
#define AVERROR_STREAM_NOT_FOUND FFERRTAG(0xF8,'S','T','R') 
#define AVERROR_BUG2 FFERRTAG( 'B','U','G',' ')
#define AVERROR_UNKNOWN FFERRTAG( 'U','N','K','N') 
#define AVERROR_EXPERIMENTAL (-0x2bb2afa8) 
#define AV_ERROR_MAX_STRING_SIZE 64
int av_strerror(int errnum, char *errbuf, size_t errbuf_size);
void *av_malloc(size_t size) ;
void *av_realloc(void *ptr, size_t size) ;
void *av_realloc_f(void *ptr, size_t nelem, size_t elsize);
void *av_mallocz(size_t size) ;
#define M_LOG2_10 3.32192809488736234787 
#define M_PHI 1.61803398874989484820 
#define AV_LOG_QUIET -8
#define AV_LOG_PANIC 0
#define AV_LOG_FATAL 8
#define AV_LOG_ERROR 16
#define AV_LOG_WARNING 24
#define AV_LOG_INFO 32
#define AV_LOG_VERBOSE 40
#define AV_LOG_DEBUG 48
#define AV_LOG_MAX_OFFSET (AV_LOG_DEBUG - AV_LOG_QUIET)
void av_log_set_callback(void (*)(void*, int, const char*, va_list));
#define AV_LOG_SKIP_REPEATED 1
#define AVPALETTE_SIZE 1024
#define AVPALETTE_COUNT 256
#define LIBSWSCALE_VERSION_MAJOR 2
#define LIBSWSCALE_VERSION_MINOR 3
#define LIBSWSCALE_VERSION_MICRO 100
#define LIBSWSCALE_VERSION_INT AV_VERSION_INT(LIBSWSCALE_VERSION_MAJOR, LIBSWSCALE_VERSION_MINOR, LIBSWSCALE_VERSION_MICRO)
#define LIBSWSCALE_BUILD LIBSWSCALE_VERSION_INT
#define LIBSWSCALE_IDENT "SwS" AV_STRINGIFY(LIBSWSCALE_VERSION)
#define FF_API_SWS_GETCONTEXT (LIBSWSCALE_VERSION_MAJOR < 3)
#define FF_API_SWS_CPU_CAPS (LIBSWSCALE_VERSION_MAJOR < 3)
#define FF_API_SWS_FORMAT_NAME (LIBSWSCALE_VERSION_MAJOR < 3)
#define SWS_FAST_BILINEAR 1
#define SWS_BILINEAR 2
#define SWS_BICUBIC 4
#define SWS_X 8
#define SWS_POINT 0x10
#define SWS_AREA 0x20
#define SWS_BICUBLIN 0x40
#define SWS_GAUSS 0x80
#define SWS_SINC 0x100
#define SWS_LANCZOS 0x200
#define SWS_SPLINE 0x400
#define SWS_SRC_V_CHR_DROP_MASK 0x30000
#define SWS_SRC_V_CHR_DROP_SHIFT 16
#define SWS_PARAM_DEFAULT 123456
#define SWS_PRINT_INFO 0x1000
#define SWS_FULL_CHR_H_INT 0x2000
#define SWS_FULL_CHR_H_INP 0x4000
#define SWS_DIRECT_BGR 0x8000
#define SWS_ACCURATE_RND 0x40000
#define SWS_BITEXACT 0x80000
#define SWS_ERROR_DIFFUSION 0x800000
#define SWS_CPU_CAPS_MMX 0x80000000
#define SWS_CPU_CAPS_MMXEXT 0x20000000
#define SWS_CPU_CAPS_MMX2 0x20000000
#define SWS_CPU_CAPS_3DNOW 0x40000000
#define SWS_CPU_CAPS_ALTIVEC 0x10000000
#define SWS_CPU_CAPS_BFIN 0x01000000
#define SWS_CPU_CAPS_SSE2 0x02000000
#define SWS_MAX_REDUCE_CUTOFF 0.002
#define SWS_CS_ITU709 1
#define SWS_CS_FCC 4
#define SWS_CS_ITU601 5
#define SWS_CS_ITU624 5
#define SWS_CS_SMPTE170M 5
#define SWS_CS_SMPTE240M 7
#define SWS_CS_DEFAULT 5