src/org/javaavc/gen/swscale/LibswscaleLibrary.java

	public static final int AVERROR_FILTER_NOT_FOUND = (-((0xF8) | (('F') << 8) | (('I') << 16) | (('L') << 24)));
	public static final int AVERROR_EXTERNAL = (-(('E') | (('X') << 8) | (('T') << 16) | ((' ') << 24)));
	public static final int AV_HAVE_INCOMPATIBLE_FORK_ABI = 0;
	public static final int SWS_CS_SMPTE170M = 5;
	public static final int SWS_SPLINE = 0x400;
	public static final int LIBSWSCALE_BUILD = (2 << 16 | 3 << 8 | 100);
	public static final int SWS_BITEXACT = 0x80000;
	public static final int AVERROR_UNKNOWN = (-(('U') | (('N') << 8) | (('K') << 16) | (('N') << 24)));
	public static final boolean FF_API_CONTEXT_SIZE = (52 < 53);
	public static final int LIBAVUTIL_VERSION_INT = (52 << 16 | 38 << 8 | 100);
	public static final int AVERROR_DEMUXER_NOT_FOUND = (-((0xF8) | (('D') << 8) | (('E') << 16) | (('M') << 24)));
	public static final int SWS_AREA = 0x20;
	public static final int SWS_DIRECT_BGR = 0x8000;
	public static final boolean FF_API_OLD_AVOPTIONS = (52 < 53);
	public static final int SWS_FAST_BILINEAR = 1;
	public static final boolean FF_API_SAMPLES_UTILS_RETURN_ZERO = (52 < 53);
	public static final boolean FF_API_PIX_FMT_DESC = (52 < 53);
	public static final int AVERROR_OPTION_NOT_FOUND = (-((0xF8) | (('O') << 8) | (('P') << 16) | (('T') << 24)));
	public static final int FF_LAMBDA_SCALE = (1 << 7);
	public static final int AV_HAVE_BIGENDIAN = 0;
	public static final int SWS_ACCURATE_RND = 0x40000;
	public static final int SWS_CPU_CAPS_MMX = 0x80000000;
	public static final int AVERROR_BUG2 = (-(('B') | (('U') << 8) | (('G') << 16) | ((' ') << 24)));
	public static final boolean FF_API_PIX_FMT = (52 < 53);
	public static final int AV_LOG_DEBUG = 48;
	public static final int AVPALETTE_SIZE = 1024;
	public static final boolean FF_API_AV_REVERSE = (52 < 53);
	public static final int SWS_ERROR_DIFFUSION = 0x800000;
	public static final double M_LOG2_10 = 3.32192809488736234787;
	public static final int SWS_CPU_CAPS_3DNOW = 0x40000000;
	public static final int SWS_CS_ITU624 = 5;
	public static final int SWS_CPU_CAPS_ALTIVEC = 0x10000000;
	public static final int AV_LOG_MAX_OFFSET = (48 - -8);
	public static final int AV_LOG_WARNING = 24;
	public static final int FF_QP2LAMBDA = 118;
	public static final int AVERROR_PROTOCOL_NOT_FOUND = (-((0xF8) | (('P') << 8) | (('R') << 16) | (('O') << 24)));
	public static final int SWS_PRINT_INFO = 0x1000;
	public static final int AV_HAVE_INCOMPATIBLE_LIBAV_ABI = 0;
	public static final int SWS_SINC = 0x100;
	public static final boolean FF_API_SWS_GETCONTEXT = (2 < 3);
	public static final int FF_LAMBDA_MAX = (256 * 128 - 1);
	public static final int AV_ERROR_MAX_STRING_SIZE = 64;
	public static final int AVERROR_EXIT = (-(('E') | (('X') << 8) | (('I') << 16) | (('T') << 24)));
	public static final int AV_LOG_VERBOSE = 40;
	public static final int AVERROR_EXPERIMENTAL = (0x2bb2afa8);
	public static final int SWS_SRC_V_CHR_DROP_SHIFT = 16;
	public static final int SWS_FULL_CHR_H_INP = 0x4000;
	public static final int SWS_FULL_CHR_H_INT = 0x2000;
	public static final boolean FF_API_AVFRAME_LAVC = (52 < 53);
	public static final int SWS_CPU_CAPS_MMXEXT = 0x20000000;
	public static final int SWS_POINT = 0x10;
	public static final int AV_LOG_ERROR = 16;
	public static final int LIBAVUTIL_BUILD = (52 << 16 | 38 << 8 | 100);
	public static final int SWS_CPU_CAPS_MMX2 = 0x20000000;
	public static final boolean FF_API_SWS_FORMAT_NAME = (2 < 3);
	public static final int FF_QUALITY_SCALE = (1 << 7);
	public static final int AV_LOG_INFO = 32;
	public static final int AV_TIME_BASE = 1000000;
	public static final int SWS_GAUSS = 0x80;
	public static final int SWS_CPU_CAPS_SSE2 = 0x02000000;
	public static final double SWS_MAX_REDUCE_CUTOFF = 0.002;
	public static final boolean FF_API_CPU_FLAG_MMX2 = (52 < 53);
	public static final boolean FF_API_SWS_CPU_CAPS = (2 < 3);
	public static final int SWS_CS_ITU709 = 1;
	public static final int AVERROR_BSF_NOT_FOUND = (-((0xF8) | (('B') << 8) | (('S') << 16) | (('F') << 24)));
	public static final int SWS_CS_SMPTE240M = 7;
	public static final int AVERROR_PATCHWELCOME = (-(('P') | (('A') << 8) | (('W') << 16) | (('E') << 24)));
	public static final int LIBSWSCALE_VERSION_INT = (2 << 16 | 3 << 8 | 100);
	public static final int SWS_CS_FCC = 4;
	public static final boolean FF_API_GET_BITS_PER_SAMPLE_FMT = (52 < 53);
	public static final int AVERROR_DECODER_NOT_FOUND = (-((0xF8) | (('D') << 8) | (('E') << 16) | (('C') << 24)));
	public static final int SWS_LANCZOS = 0x200;
	public static final int AV_LOG_FATAL = 8;
	public static final int LIBSWSCALE_VERSION_MICRO = 100;
	public static final int LIBSWSCALE_VERSION_MAJOR = 2;
	public static final int LIBAVUTIL_VERSION_MICRO = 100;
	public static final int AV_LOG_SKIP_REPEATED = 1;
	public static final int SWS_CPU_CAPS_BFIN = 0x01000000;
	public static final int AVERROR_STREAM_NOT_FOUND = (-((0xF8) | (('S') << 8) | (('T') << 16) | (('R') << 24)));
	public static final int AV_LOG_QUIET = -8;
	public static final int LIBAVUTIL_VERSION_MINOR = 38;
	public static final int SWS_X = 8;
	public static final int AVERROR_BUG = (-(('B') | (('U') << 8) | (('G') << 16) | (('!') << 24)));
	public static final boolean FF_API_AUDIOCONVERT = (52 < 53);
	public static final int SWS_BICUBLIN = 0x40;
	public static final String LIBAVUTIL_IDENT = "Lavu";
	public static final int SWS_BICUBIC = 4;
	public static final int SWS_CS_ITU601 = 5;
	public static final int LIBAVUTIL_VERSION_MAJOR = 52;
	public static final int AVERROR_ENCODER_NOT_FOUND = (-((0xF8) | (('E') << 8) | (('N') << 16) | (('C') << 24)));
	public static final int AVERROR_BUFFER_TOO_SMALL = (-(('B') | (('U') << 8) | (('F') << 16) | (('S') << 24)));
	public static final int SWS_SRC_V_CHR_DROP_MASK = 0x30000;
	public static final int FF_LAMBDA_SHIFT = 7;
	public static final int LIBSWSCALE_VERSION_MINOR = 3;
	public static final int SWS_CS_DEFAULT = 5;
	public static final int SWS_BILINEAR = 2;
	public static final int AV_HAVE_FAST_UNALIGNED = 1;
	public static final boolean FF_API_FIND_OPT = (52 < 53);
	public static final String LIBSWSCALE_IDENT = "SwS";
	public static final int AVERROR_EOF = (-(('E') | (('O') << 8) | (('F') << 16) | ((' ') << 24)));
	public static final int AVERROR_INVALIDDATA = (-(('I') | (('N') << 8) | (('D') << 16) | (('A') << 24)));
	public static final double M_PHI = 1.61803398874989484820;
	public static final int AVPALETTE_COUNT = 256;
	public static final int __STDC_HOSTED__ = 1;
	public static final int AV_LOG_PANIC = 0;
	public static final boolean FF_API_LLS_PRIVATE = (52 < 53);
	public static final int SWS_PARAM_DEFAULT = 123456;
	public interface av_log_set_callback_arg1_callback extends Callback {
		void apply(Pointer voidPtr1, int int1, Pointer charPtr1, LibswscaleLibrary.va_list va_list1);
	};
	/**
	 * Return the LIBAVUTIL_VERSION_INT constant.<br>
	 * Original signature : <code>int avutil_version()</code>
	 */
	int avutil_version();
	/**
	 * Return the libavutil build-time configuration.<br>
	 * Original signature : <code>char* avutil_configuration()</code>
	 */
	String avutil_configuration();
	/**
	 * Return the libavutil license.<br>
	 * Original signature : <code>char* avutil_license()</code>
	 */
	String avutil_license();
	/**
	 * Return a string describing the media_type enum, NULL if media_type<br>
	 * is unknown.<br>
	 * Original signature : <code>char* av_get_media_type_string(AVMediaType)</code>
	 */
	String av_get_media_type_string(int media_type);
	/**
	 * Return a single letter to describe the given picture type<br>
	 * pict_type.<br>
	 * * @param[in] pict_type the picture type @return a single character<br>
	 * representing the picture type, '?' if pict_type is unknown<br>
	 * Original signature : <code>char av_get_picture_type_char(AVPictureType)</code>
	 */
	byte av_get_picture_type_char(int pict_type);
	/** Original signature : <code>int av_log2(unsigned)</code> */
	int av_log2(int v);
	/** Original signature : <code>int av_log2_16bit(unsigned)</code> */
	int av_log2_16bit(int v);
	/**
	 * Put a description of the AVERROR code errnum in errbuf.<br>
	 * In case of failure the global variable errno is set to indicate the<br>
	 * error. Even in case of failure av_strerror() will print a generic<br>
	 * error message indicating the errnum provided to errbuf.<br>
	 * * @param errnum      error code to describe<br>
	 * @param errbuf      buffer to which description is written<br>
	 * @param errbuf_size the size in bytes of errbuf<br>
	 * @return 0 on success, a negative value if a description for errnum<br>
	 * cannot be found<br>
	 * Original signature : <code>int av_strerror(int, char*, size_t)</code><br>
	 * @deprecated use the safer methods {@link #av_strerror(int, java.nio.ByteBuffer, com.ochafik.lang.jnaerator.runtime.NativeSize)} and {@link #av_strerror(int, com.sun.jna.Pointer, com.ochafik.lang.jnaerator.runtime.NativeSize)} instead
	 */
	@Deprecated 
	int av_strerror(int errnum, Pointer errbuf, NativeSize errbuf_size);
	/**
	 * Put a description of the AVERROR code errnum in errbuf.<br>
	 * In case of failure the global variable errno is set to indicate the<br>
	 * error. Even in case of failure av_strerror() will print a generic<br>
	 * error message indicating the errnum provided to errbuf.<br>
	 * * @param errnum      error code to describe<br>
	 * @param errbuf      buffer to which description is written<br>
	 * @param errbuf_size the size in bytes of errbuf<br>
	 * @return 0 on success, a negative value if a description for errnum<br>
	 * cannot be found<br>
	 * Original signature : <code>int av_strerror(int, char*, size_t)</code>
	 */
	int av_strerror(int errnum, ByteBuffer errbuf, NativeSize errbuf_size);
	/**
	 * Allocate a block of size bytes with alignment suitable for all<br>
	 * memory accesses (including vectors if available on the CPU).<br>
	 * @param size Size in bytes for the memory block to be allocated.<br>
	 * @return Pointer to the allocated block, NULL if the block cannot<br>
	 * be allocated.<br>
	 * @see av_mallocz()<br>
	 * Original signature : <code>void* av_malloc(size_t)</code>
	 */
	Pointer av_malloc(NativeSize size);
	/**
	 * Allocate or reallocate a block of memory.<br>
	 * If ptr is NULL and size > 0, allocate a new block. If<br>
	 * size is zero, free the memory block pointed to by ptr.<br>
	 * @param ptr Pointer to a memory block already allocated with<br>
	 * av_malloc(z)() or av_realloc() or NULL.<br>
	 * @param size Size in bytes for the memory block to be allocated or<br>
	 * reallocated.<br>
	 * @return Pointer to a newly reallocated block or NULL if the block<br>
	 * cannot be reallocated or the function is used to free the memory block.<br>
	 * @see av_fast_realloc()<br>
	 * Original signature : <code>void* av_realloc(void*, size_t)</code>
	 */
	Pointer av_realloc(Pointer ptr, NativeSize size);
	/**
	 * Allocate or reallocate a block of memory.<br>
	 * This function does the same thing as av_realloc, except:<br>
	 * - It takes two arguments and checks the result of the multiplication for<br>
	 *   integer overflow.<br>
	 * - It frees the input block in case of failure, thus avoiding the memory<br>
	 *   leak with the classic "buf = realloc(buf); if (!buf) return -1;".<br>
	 * Original signature : <code>void* av_realloc_f(void*, size_t, size_t)</code>
	 */
	Pointer av_realloc_f(Pointer ptr, NativeSize nelem, NativeSize elsize);
